--- a/Website/assets/css/muflehastyles.css
+++ b/Website/assets/css/muflehastyles.css
@@ -532,10 +532,12 @@ body {font-family: Arial, sans-serif;
   color: #555;
   line-height: 1.6;
   text-align: center;
- 
+
   font-weight: 50%;
 }
-
+.mb-4 h1{
+  font-family: "Protest Revolution", sans-serif;
+}
 
 .mb-4::before, 
 .mb-4::after {
@@ -887,6 +889,8 @@ body {
 .about-text h2 {
   font-size: 2rem;
   color: #075544;
+/* font-family: "Great Vibes", serif;
+letter-spacing: 5px; */
 }
 
 .about-text p {
@@ -905,7 +909,7 @@ body {
 
 /* Social Media & Email Signup */
 .cta-section {
-  background-color: #b3b3b3;
+  background-color: #d0e7b2;
   padding: 20px;
   text-align: center;
 }
