--- a/Website/assets/css/style.css
+++ b/Website/assets/css/style.css
@@ -28,6 +28,11 @@ body {font-family: Arial, sans-serif;
   align-items: center;
   transition: all 0.3s ease-in-out;
 }
+.card h2 i {
+  margin-right: 10px;
+  color: #224b20; 
+}
+
 #overlay h2{
 color: #28a03c;
 text-transform: uppercase;
@@ -113,7 +118,7 @@ p {
 }
 
 .input-group input:focus + i {
-  color: #143826; 
+  color: #276d4a; 
 }
 
 
